--- a/_quarto.yml
+++ b/_quarto.yml
@@ -44,7 +44,7 @@ website:
       - href: content/stationaryStocks.qmd
         text: Stationary recorders
       - href: content/NAStocks.qmd
-        text: North Atlantic stocks
+        text: Drifting recorders
 
         
 format:
